# kichijitsu

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/homebrew/: kichijitsu.rb
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  remote.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: app_version.toml  gh_api.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/sync/: .dev.vars.example  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  wrangler.jsonc
apps/sync/migrations/: 0001_init.sql  0002_accounts.sql  0003_watches.sql  0004_owner.sql  0005_visible_calendars.sql  0006_block_rules.sql  0007_block_rule_ooo_fallback.sql  0008_github_connections.sql  0009_mcp_tokens.sql  0010_work_logs.sql  0011_work_logs_open_intervals.sql
apps/sync/src/: accounts.ts  allowlist.ts  crypto.ts  http.ts  index.ts  mcp-auth.ts  mcp-calendars.ts  mcp-token.ts  middleware.ts  oauth-state.ts  profile-resolution.ts  rpc-result.ts  session.ts  types.ts  watch-token.ts
apps/sync/test/: accounts.test.ts  allowlist.test.ts  auth.test.ts  block-orchestrate.test.ts  block-reconcile.test.ts  block-rules.test.ts  create-event.test.ts  crypto.test.ts  delete-event.test.ts  free-slots.test.ts  github-activity.test.ts  github-ci.test.ts  (+40 more)
apps/web/: index.html  package.json  vite.config.ts  wrangler.jsonc
brand/: README.md  gen-pwa-icons.js  gen-wordmark.js
docs/: blocking.md  deploy.md  desktop.md  github-integration.md  github-oauth.md  google-tasks.md  google-verification.md  i18n.md  mcp.md  multiplatform.md  self-hosting.md  tooling.md
(+248 files in other folders)
