[package]
name = "kichijitsu-desktop"
# バージョンは tauri.conf.json / package.json と必ず揃えること。
# app_version コマンドは env!("CARGO_PKG_VERSION")(= この値)を返すため、
# ここがズレると設定画面の「アプリ vX.Y.Z」表示が実バージョンと食い違う。
version = "0.1.4"
description = "kichijitsu desktop shell (reads the production web app via a remote URL webview)"
authors = ["Love-Rox"]
license = ""
repository = "https://github.com/Love-Rox/kichijitsu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kichijitsu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
# tray-icon: 増分2a のトレイ常駐 (TrayIconBuilder) に必要。既定では無効な feature。
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

# global-shortcut はデスクトップ専用プラグイン（モバイルには存在しない）。
# 公式ドキュメント (v2.tauri.app/plugin/global-shortcut) 通りに target cfg で限定する。
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
